--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,12 +1,33 @@
 page-login {
 
-    .logo {
-        overflow: auto;
-        height: 60%;
-        width: 80%;
-        float: left;
-        margin-left: auto;
-        margin-top: auto;
-        background-image: url(../assets/imgs/logo.png);
-    }
+  .logo-row {
+    width: 250px;
+    margin: 100px auto;
+  }
+
+  .logo {
+    width: 100%;
+    height: 235px;
+    text-align: center;
+  }
+
+  .form {
+    position: relative;
+    min-height: 150px;
+  }
+
+  .form-row {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+
+  .button {
+      margin-top: 10px;
+  }
+
+  .button.login {
+      margin-left: 15px;
+  }
+
 }
