--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,4 +1,4 @@
-page-login {
+.ios, .md {
 
   .logo-row {
     width: 250px;
@@ -23,11 +23,27 @@ page-login {
   }
 
   .button {
-      margin-top: 10px;
+    margin-top: 10px;
+  }
+
+  .forgot {
+    margin-top: 30px;
   }
 
   .button.login {
-      margin-left: 15px;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    -webkit-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
+    box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
+  }
+
+  .button.register {
+    margin-left: 15px;
+    margin-bottom: 15px;
+    -webkit-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
+    box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
   }
 
 }
