fixing background on intro screne

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -52,7 +52,7 @@ $colors: (
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
+$list-md-header-border-top: 0px;
 
 
 
