--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -1,7 +1,7 @@
 page-intro {
 
   .slide1 {
-    background-color: #fff;
+    background-color: #95a5a6;
   }
 
   .slide2 {
@@ -17,6 +17,7 @@ page-intro {
   }
 
   .diag {
+    background: url(../../assets/imgs/whitebg.svg) no-repeat;
     position: absolute;
     z-index: 1;
     width: 100%;
@@ -68,14 +69,14 @@ page-intro {
     width: 100% !important;
   }
 
-  .skipper {
+  .skip {
     position: absolute;
     bottom: 20px;
-    width: 100%;
-    text-align: center;
+    right: 20px;
     cursor: pointer;
     z-index: 5;
-    font-size: 1em;
-    color: black !important;
+    font-size: .8em;
+    color: white !important;
   }
+
 }
