friends page added and styled

--- a/src/pages/friends/friends.scss
+++ b/src/pages/friends/friends.scss
@@ -1,4 +1,4 @@
-page-home {
+page-friends {
 
     .profile {
         background: transparent;
@@ -8,9 +8,5 @@ page-home {
         height: 30px;
         width: auto;
         margin-right: 5px;
-    }
-    
-    #map_canvas {
-        height: 100%;
     }
 }
