styled friends/profile page

--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -44,7 +44,7 @@ page-intro {
 
   h2 {
     margin-top: 80% !important;
-    font-weight: normal;
+    font-weight: 500;
     font-size: 1em;
   }
 
