--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -30,20 +30,25 @@ page-login {
     margin-top: 30px;
   }
 
-  .button.login {
-    margin-left: 15px;
-    margin-bottom: 15px;
+  .login {
+    width: 90%;
+    margin-top: 20px;
     -webkit-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
     box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
   }
 
-  .button.register {
-    margin-left: 15px;
-    margin-bottom: 15px;
+  .register {
+    width: 50%;
     -webkit-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
     box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
+  }
+
+  h4 {
+    margin-top: 40px;
+    font-size: .9em;
+    font-weight: 100;
   }
 
 }
